tests/snapshots/compile__wgsl_transform_perspective_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_perspective1_tiltX: f32,
    u_control_perspective1_tiltY: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn perspective1_output(uv: vec2f) -> vec4f {
    let w = max(1.0 + uv.x * (u.u_control_perspective1_tiltX) + uv.y * (u.u_control_perspective1_tiltY), 0.001);
    let tiltedUV = uv / w;
    return defaultUvMap(tiltedUV);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return perspective1_output(uv);
}
