tests/snapshots/compile__wgsl_transform_polarcoords_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_polarcoords1_centerX: f32,
    u_control_polarcoords1_centerY: f32,
    u_control_polarcoords1_scale: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn polarcoords1_output(uv: vec2f) -> vec4f {
    let center = vec2f(u.u_control_polarcoords1_centerX, u.u_control_polarcoords1_centerY);
    var scale = u.u_control_polarcoords1_scale;
    if (abs(scale) < 1e-6) { scale = select(1e-6, -1e-6, scale < 0.0); }
    let cuv = uv - center;
    let r = length(cuv) / scale;
    let theta = atan2(cuv.y, cuv.x) / PI;
    let sampleUV = vec2f(theta, r * 2.0 - 1.0);
    return defaultUvMap(sampleUV);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return polarcoords1_output(uv);
}
