tests/snapshots/compile__wgsl_transform_regionsized_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mix4_amount: f32,
    u_control_regionsized1_bgColor: vec4f,
    u_control_regionsized1_centerX: f32,
    u_control_regionsized1_centerY: f32,
    u_control_regionsized1_height: f32,
    u_control_regionsized1_softness: f32,
    u_control_regionsized1_width: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn regionsized1_output(uv: vec2f) -> vec4f {
    let rectCenter = vec2f(u.u_control_regionsized1_centerX, u.u_control_regionsized1_centerY);
    let rectHalf = vec2f(u.u_control_regionsized1_width, u.u_control_regionsized1_height) * 0.5;
    let cropMin = rectCenter - rectHalf;
    let cropMax = rectCenter + rectHalf;
    let overshoot = max(vec2f(0.0), abs(uv - rectCenter) - rectHalf);
    let mask = 1.0 - smoothstep(0.0, max(u.u_control_regionsized1_softness, 1e-5), length(overshoot));
    let sampleUV = uv;
    let fg = defaultUvMap(sampleUV) * mask;
    return fg + u.u_control_regionsized1_bgColor * (1.0 - fg.a);
}

fn regionsized1_mask(uv: vec2f) -> f32 {
    let rectCenter = vec2f(u.u_control_regionsized1_centerX, u.u_control_regionsized1_centerY);
    let rectHalf = vec2f(u.u_control_regionsized1_width, u.u_control_regionsized1_height) * 0.5;
    let cropMin = rectCenter - rectHalf;
    let cropMax = rectCenter + rectHalf;
    let overshoot = max(vec2f(0.0), abs(uv - rectCenter) - rectHalf);
    let mask = 1.0 - smoothstep(0.0, max(u.u_control_regionsized1_softness, 1e-5), length(overshoot));
    return mask;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return vec4f(regionsized1_mask(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a);
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = regionsized1_output(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
